# DCAgent

./: .dockerignore  .env.example  .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements-benchmark.in  requirements-offline.in  requirements.txt
backend/alembic/: env.py
backend/app/: agent.py  answer_text.py  clickhouse_gateway.py  database.py  embedding_client.py  embedding_contracts.py  embedding_service.py  embeddings.py  evaluation.py  evaluation_batches.py  evaluation_import.py  ingestion.py  llm.py  main.py  migration_entrypoint.py  models.py  offline_artifacts.py  offline_settings.py  parser_runtime.py  physoc_sse.py  repository.py  retrieval.py  routes.py  runtime_env.py  schemas.py  seed.py  spreadsheet_schema.py  sql_repository.py  storage.py  structured_answer.py  structured_ingestion.py  structured_models.py  structured_query.py  structured_repository.py  structured_worker.py  text_parser.py  time_utils.py
backend/tests/: test_agent.py  test_alembic_baseline.py  test_answer_text.py  test_api_contract.py  test_app_configuration.py  test_clickhouse_gateway.py  test_database_config.py  test_embedding_client.py  test_embedding_service.py  test_embeddings.py  test_evaluation_batches.py  test_evaluation_import.py  test_infra_health.py  test_knowledge_ingestion_pipeline.py  test_knowledge_upload.py  test_lazy_startup.py  test_llm_provider.py  test_migration_entrypoint.py  test_offline_artifacts.py  test_offline_settings.py  test_parser_runtime.py  test_physoc_sse.py  test_project_dependencies.py  test_quality_evaluation.py  (+12 more)
(+167 files in other folders)
