[project]
name = "dc-agent-backend"
version = "0.1.0"
description = "DC-Agent backend service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.0,<2.0.0",
    "openpyxl>=3.1.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
offline = [
    "alembic>=1.16,<2",
    "clickhouse-connect>=0.8,<1",
    "qdrant-client>=1.14,<2",
    "redis>=5,<7",
    "polars>=1.30,<2",
    "pyarrow>=19,<22",
    "pyxlsb>=1.0,<2",
    "docling>=2.40,<3",
    "paddlepaddle>=3,<4",
    "paddleocr>=3,<4",
    "jieba>=0.42,<1",
    "sqlglot>=27,<30",
    "FlagEmbedding>=1.3,<2",
    "onnxruntime>=1.22,<2",
    "psutil>=7,<8",
]
benchmark = [{ include-group = "offline" }, "locust>=2.37,<3"]
dev = ["alembic>=1.16,<2", "ruff==0.15.22"]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["uploads"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
